plane icons and lines added to the map

--- a/FlightControlWeb/wwwroot/StyleSheet.css
+++ b/FlightControlWeb/wwwroot/StyleSheet.css
@@ -9,8 +9,8 @@
 /* grid style */
 body {
     margin: 30px;
-    /*background-image: url("wallpaper2.jpg");
-    background-position: center;*/
+    background-image: url("wallpaper2.jpg");
+    background-position: center;
 }
 
 .whole-container {
