--- a/FlightControlWeb/wwwroot/StyleSheet.css
+++ b/FlightControlWeb/wwwroot/StyleSheet.css
@@ -22,7 +22,7 @@ body {
 .flight-details-container {
     border: 1px solid black;
     overflow: auto;
-    height: 200px;
+    height: 130px;
 }
 
 .my-flights-container {
@@ -46,7 +46,7 @@ body {
 }
 /* map style */
 #mapid {
-    height: 400px;
+    height: 470px;
     width: 100%;
 }
 /* scrollbar */
@@ -94,7 +94,7 @@ p {
     margin-bottom: 10px;
 }
 
-.button {
+/*.button {
     display: inline-block;
     padding: 10px;
     background: #ccc;
@@ -105,7 +105,7 @@ p {
 
 .button:hover {
     background: #ddd;
-}
+}*/
 
 #fileElem {
     display: none;
